--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --watch",
+    "postinstall": "webpack",
+  },
+  "engines": {
+    "npm": "5.5.1",
+    "node": "8.9.1",
   },
   "repository": {
     "type": "git",
