--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.4",
+    "npm-start": "^1.4.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -24,13 +25,13 @@
     "test": "test"
   },
   "scripts": {
+    "start": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch",
-    "postinstall": "webpack",
+    "postinstall": "webpack"
   },
   "engines": {
     "npm": "5.5.1",
-    "node": "8.9.1",
+    "node": "v8.9.1"
   },
   "repository": {
     "type": "git",
