--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "dependencies": "0.0.1",
     "lodash": "^4.17.4",
     "npm-start": "^1.4.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-sticky": "^6.0.1",
+    "react-stickynode": "^1.4.1",
     "react-text-input": "0.0.8",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
