Add img tag instead of custom Image tag for post photos

--- a/package.json
+++ b/package.json
@@ -47,7 +47,5 @@
     "url": "https://github.com/matthaaa/instagraph/issues"
   },
   "homepage": "https://github.com/matthaaa/instagraph#readme",
-  "devDependencies": {
-    "react-image-resizer": "^1.2.0"
-  }
+  "devDependencies": {}
 }
