User Modal component for upload form

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.7",
+    "react-modal": "^3.1.12",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-stickynode": "^1.4.1",
