--- a/package.json
+++ b/package.json
@@ -50,5 +50,7 @@
     "url": "https://github.com/matthaaa/instagraph/issues"
   },
   "homepage": "https://github.com/matthaaa/instagraph#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1"
+  }
 }
