--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "dependencies": "0.0.1",
+    "infinite-scroll": "^3.0.3",
     "lodash": "^4.17.4",
     "npm-start": "^1.4.2",
     "react": "^16.2.0",
