--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "postinstall": "webpack"
   },
   "engines": {
-    "npm": "5.5.1",
-    "node": "v8.9.1"
+    "npm": "5.5.1"
   },
   "repository": {
     "type": "git",
